zigbee/z2mqtt-02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: z2mqtt-02
  name: z2mqtt-02
  namespace: home-assistant
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: z2mqtt-02
  strategy:
    type: Recreate
  template:
    metadata:
      #: null
      labels:
        app: z2mqtt-02
    spec:
      containers:
      - env:
        - name: TZ
          value: Europe/Warsaw
        - name: ZIGBEE2MQTT_DATA
          value: "/app/data"
        - name: ZIGBEE2MQTT_CONFIG_MQTT_SERVER
          value: "mqtt://10.0.50.11:31883"
        - name: ZIGBEE2MQTT_CONFIG_MQTT_BASE_TOPIC
          value: "zigbee2mqtt-02"
        - name: ZIGBEE2MQTT_CONFIG_HOMEASSISTANT
          value: "true"
        - name: ZIGBEE2MQTT_CONFIG_PERMIT_JOIN
          value: "true"
        - name: ZIGBEE2MQTT_CONFIG_SERIAL_PORT
          value: "tcp://10.0.50.4:6638"
        - name: ZIGBEE2MQTT_CONFIG_SERIAL_RTSCTS
          value: "false"
        - name: ZIGBEE2MQTT_CONFIG_SERIAL_BAUDRATE
          value: "115200"
        - name: ZIGBEE2MQTT_CONFIG_SERIAL_ADAPTER
          value: "ezsp"
        - name: ZIGBEE2MQTT_CONFIG_SERIAL_DISABLE_LED
          value: "false"
        - name: ZIGBEE2MQTT_CONFIG_FRONTEND
          value: "false"
        - name: ZIGBEE2MQTT_CONFIG_FRONTEND_PORT
          value: "8888"
        # - name: ZIGBEE2MQTT_CONFIG_DEVICES
        #   value: "/app/data/devices.yaml"
        # - name: ZIGBEE2MQTT_CONFIG_GROUPS
        #   value: "/app/data/groups.yaml"
        - name: ZIGBEE2MQTT_CONFIG_OTA_IKEA_OTA_USE_TEST_URL
          value: "true"
        - name: ZIGBEE2MQTT_DEVICE_OPTIONS_LEGACY
          value: "false"
        - name: ZIGBEE2MQTT_CONFIG_ADVANCED_PAN_ID
          value: "10841"
        - name: ZIGBEE2MQTT_CONFIG_ADVANCED_EXT_PAN_ID
          value: '[177,236,227,102,233,177,36,68]'
        - name: ZIGBEE2MQTT_CONFIG_ADVANCED_NETWORK_KEY
          value: '[1, 3, 5, 7, 9, 11, 13, 15, 0, 2, 4, 6, 8, 10, 12, 13]'
        - name: ZIGBEE2MQTT_CONFIG_ADVANCED_CHANNEL
          value: "26"
        - name: ZIGBEE2MQTT_CONFIG_ADVANCED_TRANSMIT_POWER
          value: "20"
        - name: ZIGBEE2MQTT_CONFIG_ADVANCED_HOMEASSISTANT_LEGACY_ENTITY_ATTRIBUTES
          value: "false"
        - name: ZIGBEE2MQTT_CONFIG_ADVANCED_LEGACY_API
          value: "false"
        - name: ZIGBEE2MQTT_CONFIG_ADVANCED_LEGACY_AVAILABILITY_PAYLOAD
          value: "false"
        - name: ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_LEVEL
          value: "debug"
        - name: ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_OUTPUT
          value: '["console","file"]'
        image: koenkk/zigbee2mqtt:latest
        imagePullPolicy: Always
        name: z2mqtt-02
        ports:
        - containerPort: 8888
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/data
          name: longhorn-z2mqtt-02-volume
        - mountPath: /run/udev
          name: z2mqtt-02-udev
      dnsPolicy: ClusterFirst
      hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: longhorn-z2mqtt-02-volume
        persistentVolumeClaim:
          claimName: longhorn-z2mqtt-02-volume-claim
      - hostPath:
          path: /run/udev
          type: ""
        name: z2mqtt-02-udev
