zigbee/z2mqtt-02-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"z2mqtt-02","namespace":"home-assistant"},"spec":{"ports":[{"name":"z2mqtt-02","port":8888}],"selector":{"app":"z2mqtt-02"},"type":"LoadBalancer"}}
    metallb.universe.tf/ip-allocated-from-pool: gnetk8s-pool
  creationTimestamp: "2024-08-19T11:53:15Z"
  name: z2mqtt-02
  namespace: home-assistant
  resourceVersion: "11383155"
  uid: ac3d6834-37dd-48dc-b24c-7840ab2eb68f
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.35.251
  clusterIPs:
  - 10.43.35.251
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: z2mqtt-02
    nodePort: 30599
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: z2mqtt-02
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 10.0.51.107
