zigbee/z2mqtt-manifest.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: z2mqtt
spec:
  selector:
    app: z2mqtt
  type: NodePort
  ports:
    - name: z2mqtt
      port: 8080
      targetPort: 8080
      nodePort: 31080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-assistant
  name: z2mqtt
  labels:
    app: z2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: z2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: z2mqtt
    spec:
      containers:
      - name: z2mqtt
        #image: alpine:latest
        #command:
        #  - /bin/sh
        #  - "-c"
        #  - "sleep 60m"
        image: koenkk/zigbee2mqtt:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        volumeMounts:
        - name: gfs-z2mqtt-volume
          mountPath: /app/data
        - name: z2mqtt-config
          mountPath: /app/data/configuration.yaml
          subPath: configuration.yaml
        - name: z2mqtt-config
          mountPath: /app/data/devices.yaml
          subPath: devices.yaml 
        - name: z2mqtt-udev
          mountPath: /run/udev
        # - mountPath: /dev/ttyACM0
        #   name: cc2351
        # securityContext:
        #   privileged: true
      hostNetwork: true
      volumes:
        - name: gfs-z2mqtt-volume
          persistentVolumeClaim:
            claimName: gfs-z2mqtt-volume-claim
        - name: z2mqtt-udev
          hostPath:
            path: /run/udev
        # - name: cc2351
        #   hostPath:
        #     path: /dev/ttyACM0
        - name: z2mqtt-config
          configMap:
            name: z2mqtt-config
