zigbee/z2mqtt-01-manifest.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: z2mqtt-01
spec:
  selector:
    app: z2mqtt-01
  type: LoadBalancer
  ports:
    - name: z2mqtt-01
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2mqtt-01-ingress
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: z2mqtt-01.48340.xyz
      http:
        paths:
          - backend:
              service:
                port:
                  number: 8888
                name: z2mqtt-01
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - z2mqtt-01.48340.xyz
      secretName: z2mqtt-01-tls
  ingressClassName: traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-assistant
  name: z2mqtt-01
  labels:
    app: z2mqtt-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: z2mqtt-01
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: z2mqtt-01
    spec:
      hostNetwork: true
      containers:
      - name: z2mqtt-01
        image: koenkk/zigbee2mqtt:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8888
          protocol: TCP
        volumeMounts:
        - name: longhorn-z2mqtt-01-volume
          mountPath: /app/data
        # - name: z2mqtt-01-config
        #   mountPath: /app/data/configuration.yaml
        #   subPath: configuration.yaml
        # - name: gfs-z2mqtt-01-volume
        #   mountPath: /app/data/devices_rw.yaml
        # - name: z2mqtt-01-config
        #   mountPath: /app/data/devices.yaml
        # subPath: devices.yaml 
        - name: z2mqtt-01-udev
          mountPath: /run/udev
        # - mountPath: /dev/ttyACM0
        #   name: cc2351
        # securityContext:
        #   privileged: true
      hostNetwork: true
      volumes:
        - name: longhorn-z2mqtt-01-volume
          persistentVolumeClaim:
            claimName: longhorn-z2mqtt-01-volume-claim
        - name: z2mqtt-01-udev
          hostPath:
            path: /run/udev
        # - name: cc2351
        #   hostPath:
        #     path: /dev/ttyACM0
        # - name: z2mqtt-01-config
        #   configMap:
        #     name: z2mqtt-01-config
