zigbee/z2mqtt-02-manifest.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: z2mqtt-02
spec:
  selector:
    app: z2mqtt-02
  type: LoadBalancer
  loadBalancerIP: 10.0.51.105
  ports:
    - name: z2mqtt-02
      port: 8082
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2mqtt-02-ingress
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: z2mqtt-02.48340.xyz
      http:
        paths:
          - backend:
              service:
                port:
                  number: 8082
                name: z2mqtt-02
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - z2mqtt-02.48340.xyz
      secretName: z2mqtt-02-tls
  ingressClassName: traefik
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: home-assistant
  name: z2mqtt-02
  labels:
    app: z2mqtt-02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: z2mqtt-02
  # strategy:
  #   type: Recreate
  template:
    metadata:
      labels:
        app: z2mqtt-02
    spec:
      hostNetwork: true
      containers:
      - name: z2mqtt-02
        #image: alpine:latest
        #command:
        #  - /bin/sh
        #  - "-c"
        #  - "sleep 60m"
        image: koenkk/zigbee2mqtt:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: longhorn-z2mqtt-02-volume
          mountPath: /app/data
        # - name: z2mqtt-02-config
        #   mountPath: /app/data/configuration.yaml
        #   subPath: configuration.yaml
        # - name: gfs-z2mqtt-02-volume
        #   mountPath: /app/data/devices_rw.yaml
        # - name: z2mqtt-02-config
        #   mountPath: /app/data/devices.yaml
        # subPath: devices.yaml 
        - name: z2mqtt-02-udev
          mountPath: /run/udev
        # - mountPath: /dev/ttyACM0
        #   name: cc2351
        # securityContext:
        #   privileged: true
      hostNetwork: true
      volumes:
        - name: longhorn-z2mqtt-02-volume
          persistentVolumeClaim:
            claimName: longhorn-z2mqtt-02-volume-claim
        - name: z2mqtt-02-udev
          hostPath:
            path: /run/udev
        # - name: cc2351
        #   hostPath:
        #     path: /dev/ttyACM0
        # - name: z2mqtt-02-config
        #   configMap:
        #     name: z2mqtt-02-config
