zigbee/z2mqtt2-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2mqtt2-ingress
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: z2mqtt2.48340.xyz
      http:
        paths:
          - backend:
              service:
                port:
                  number: 8888
                name: z2mqtt2
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - z2mqtt2.48340.xyz
      secretName: z2mqtt2-tls
  ingressClassName: traefik
