zigbee/z2mqtt2-manifest.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: z2mqtt-02
spec:
  selector:
    app: z2mqtt-02
  type: LoadBalancer
  ports:
    - name: z2mqtt-02
      port: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2mqtt-02-ingress
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: z2mqtt-02.48340.xyz
      http:
        paths:
          - backend:
              service:
                port:
                  number: 8888
                name: z2mqtt-02
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - z2mqtt-02.48340.xyz
      secretName: z2mqtt-02-tls
  ingressClassName: traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-assistant
  name: z2mqtt-02
  labels:
    app: z2mqtt-02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: z2mqtt-02
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: z2mqtt-02
    spec:
      containers:
      - name: z2mqtt-02
        image: koenkk/zigbee2mqtt:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8888
            protocol: TCP
        volumeMounts:
        - name: longhorn-z2mqtt-02-volume
          mountPath: /app/data
        - name: z2mqtt-02-udev
          mountPath: /run/udev
      hostNetwork: true
      volumes:
        - name: longhorn-z2mqtt-02-volume
          persistentVolumeClaim:
            claimName: longhorn-z2mqtt-02-volume-claim
        - name: z2mqtt-02-udev
          hostPath:
            path: /run/udev
